--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,9 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     maven {
+        url = "https://cursemaven.com"
+    }
+    maven {
         name = 'GeckoLib'
         url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
         content {
@@ -88,14 +91,23 @@ repositories {
             includeGroup("com.eliotlash.mclib")
         }
     }
+    maven {
+        url "file://${project.projectDir.parentFile}/LocalMaven"
+    }
 }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
 
+    implementation fg.deobf("curse.maven:mrcrayfishs-gun-mod-289479:4718584")
+    implementation fg.deobf('curse.maven:framework-549225:5692396')
+
     implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
     implementation("com.eliotlash.mclib:mclib:20")
+
+    implementation fg.deobf("net.harrison:battleroyalezone:1.0.0")
+    implementation fg.deobf("net.harrison:battleroyaleitem:1.0.0")
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
