--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,7 @@ dependencies {
 
     implementation fg.deobf("net.harrison:battleroyalezone:1.0.0")
     implementation fg.deobf("net.harrison:battleroyaleitem:1.0.0")
+    implementation fg.deobf("net.harrison:cgmbalance:1.0.0")
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
